--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-torch
-torchvision
-albumentations
-pillow
-streamlit
-gdown
+torch==2.0.1
+torchvision==0.15.2
+albumentations==1.3.1
+pillow==9.5.0
+streamlit==1.26.0
+gdown==4.7.1
+
+
