--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
-
+torch==1.13.1
+torchvision==0.14.1
 albumentations==1.3.1
 pillow==9.5.0
 streamlit==1.26.0
