--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-torch==1.13.1
-torchvision==0.14.1
-Pillow==9.5.0
-streamlit==1.25.0
-gdown==4.7.1
+torch==2.2.1
+torchvision==0.17.1
+streamlit==1.38.0
+Pillow==10.4.0
+requests==2.32.3
+opencv-python-headless==4.10.0.84
+numpy==1.26.4
